--- a/ContactPage4.html
+++ b/ContactPage4.html
@@ -1,115 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact Information Page</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="ContactCSS.css">
-</style>
-</head>
-<body>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar navbar-light bg-light">
-  <ul class="nav nav-tabs" tole="tablist">
-        <h3>Select one of the following names for their contact information page!</h3>
-    <li class="active"><a href="Jokes-A-Plenty.html" role="tab" data-toggle="tab">Home</a></li>
-    <li><a href="ContactPage.html" role="tab" data-toggle="tab">Gavin</a></li>
-    <li><a href="ContactPage2.html" tole="tab" data-toggle="text">MM</a></li>
-    <li><a href="ContactPage3.html" role="tab" data-toggle="tab">Danial</a></li>
-    <li><a href="ContactPage4.html" role="tab" data-toggle="tab">Rumi</a></li>
-</ul>
-  <div class="container">
-    <a class="navbar-brand" href="#">Danial Zamloot</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <!-- Hero Section-->
-  <section id="hero">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1>Hi,<br>I am Rumi Loghmani</h1>
-          <p>I am a participant in this weekend's MLH "Lights! Camera! Hackthon! II" hackathon.</p>
-        </div>
-        <div class="col">
-          <img src="https://media.discordapp.net/attachments/959547836314292274/959885232557928479/IMG_1580.jpg?width=459&height=612" alt="A picture of Rumi Loghmani.">
-        </div>
-      </div>
-      <div class="row cards">
-        <div class="col-md-4 d-flex justify-content-center">
-          <div class="card">
-            <div class="card-body">
-              <!-- Here is where they add the ICON -->
-              <img src="https://th.bing.com/th/id/R.b0c473c6aca8e81403e0213954f68432?rik=1%2fzLtpneGVk2yg&riu=http%3a%2f%2fwww.globalo.com%2fcontent%2fuploads%2f2015%2f12%2fdarth-vader.jpg&ehk=HZYgBgxG3tHOWImsnprKKvdyDQji6eiBqLuLBdjGSko%3d&risl=&pid=ImgRaw&r=0" alt="Darth Vader" class="icon">
-              <h5 class="card-title">Discord</h5>
-              <p class="card-text">N/A</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-flex justify-content-center">
-          <div class="card">
-            <div class="card-body">
-              <!-- here is where they add the ICON -->
-              <img src="..." alt="..." class="icon">
-              <h5 class="card-title">LinkedIn</h5>
-              <p class="card-text"><a href="bit.ly/rumilog">bit.ly/rumilog</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-flex justify-content-center">
-          <div class="card">
-            <div class="card-body">
-              <!-- here is where they add the ICON -->
-              <img src="..." alt="..." class="icon">
-              <h5 class="card-title">GitHub</h5>
-              <p class="card-text">N/A</p>
-            </div>
-          </div>
-        </div>
-      </div>
-  </section>
-  <section id="about-us">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col">
-          <img src="..." alt="..." class="img-fluid"/>
-        </div>
-        <div class="col">
-          <h1>About Me</h1>
-          <p>I am a Computer Science Student working in this weekend's hackathon.</p>
-          <button type="button" class="btn btn-dark btn-lg">Hire me!</button>
-        </div>
-      </div>
-    </div>
-  </section>
-  <div class="container">
-    <div class="row align-items-center projects">
-      <div class="col">
-        <h1>Our Project</h1>
-        <p>I took part in out project.</p>
-      </div>
-            <section id="contact">
-        <div class="container">
-          <div class="row align-items-center projects">
-            <div class="col">
-              <h1>Contact me</h1>
-              <p>My Contact Information can be found on the three tabs given under my name.</p>
-            </div>
-          </div>
-        </div>
-    </section>
-</nav>
-</body>
+<html>
+    <H1>Hi, I am Rumi Loghmani</H1>
+    I am an undecided engineering student at Stevens Institute of Technology.
+    <h1>About Me</h1>
+        <p>This is my first hackathon and am happy to participate in it!</p>
+    <h1>Our Project</h1>
+        <p>I helped out on the video demo and overall creation of the project and finding.</p>
+        <h3>Links</h3>
+        <p>Discord: rexo_r#3169</p>
+        <P><a href="https://www.linkedin.com/in/rumilog/">LinkedIn</a></P>
+        <img src="https://media.discordapp.net/attachments/959547836314292274/959885232557928479/IMG_1580.jpg?width=459&height=612" alt="A picture of Rumi Loghmani.">
 </html>
