--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <li class="active"><a href="#hometab" role="tab" data-toggle="tab">Home</a></li>
     <li><a href="ContactPage.html" role="tab" data-toggle="tab">Gavin</a></li>
     <li><a href="ContactPage2.html" tole="tab" data-toggle="text">MM</a></li>
-    <li><a href="ContactPage3.html" role="tab" data-toggle="tab">Danial</a></li>
+    <li><a href="ContactPage3.html" role="tab" data-toggle="tab">Daniel</a></li>
     <li><a href="ContactPage4.html" role="tab" data-toggle="tab">Rumi</a></li>
 </ul>
     <div class="container">
         <div class="row">
             <div class="col-12 d-flex flex-row align-items-center justify-content-between">
-                <div class="heading-brand">Jokes A Plenty</div>
+                <div class="heading-brand">MakeMeLaugh</div>
                 <a href="#how-to" class="btn btn-dark">Download</a>
             </div>
         </div>
@@ -64,7 +64,7 @@
                 <h1>What do you call a fake noodle?
                     <br> Impasta!
                 </h1>
-                <p class="lead mb-5">Jokes A Plenty is a lightweight, extensible, online stand-up comedian, built with modern web
+                <p class="lead mb-5">Make Me Laugh is a lightweight, extensible, online stand-up comedian, built with modern web
                     standards in mind. It is funny because it is not funny.</p>
             </div>
         </div>
@@ -78,8 +78,8 @@
                     </div>
 
                     <div id="head">
-                        <h1>Jokes-A-Plenty</h1>
-                        <p>Hello there! Thank you for visiting our webpage! This is our "Joke-A-Plenty" website. Ever had a tough day? Ever been in need of a break with laughter? Then you've come to the right place! Using the JokeAPI and JavaScript, our website generates appropriate jokes on the fly for you as the user to hear. Take time to consumer all the jokes we have, and, as always, enjoy!</p>
+                        <h1>Make-Me-Laugh</h1>
+                        <p>Hello there! Thank you for visiting our webpage! This is our "Make-Me-Laugh" website. Ever had a tough day? Ever been in need of a break with laughter? Then you've come to the right place! Using the JokeAPI and JavaScript, our website generates appropriate jokes on the fly for you as the user to hear. Take time to consumer all the jokes we have, and, as always, enjoy!</p>
                     </div>
                     <h2 id="joke"></h2>
                 
@@ -102,7 +102,7 @@
     </div>
     <div id="About" class="tabcontent">
         <h3>About</h3>
-        <p>This is our Jokes-A-Plenty website that uses the JokeAPI. Information concerning the JokeAPI can be found straight from the developers <a href="https://jokeapi.dev/">here</a>.</p>
+        <p>This is our Make-Me-Laugh website that uses the JokeAPI. Information concerning the JokeAPI can be found straight from the developers <a href="https://jokeapi.dev/">here</a>.</p>
     </div>
     <div id="Contact" class="tabcontent">
         <h3>Contact</h3>
@@ -113,7 +113,7 @@
         <p>This is where you will find more information concerning what our website can do. That can be found <a href="more.html">here</a>.</p>
     </div>
     <div id="head">
-        <h1>Jokes-A-Plenty</h1>
+        <h1>Make-Me-Laugh</h1>
         <p>Hello there! Thank you for visiting our webpage! This is our "Joke-A-Plenty" website. Ever had a tough day? Ever been in need of a break with laughter? Then you've come to the right place! Using the JokeAPI and JavaScript, our website generates appropriate jokes on the fly for you as the user to hear. Take time to consumer all the jokes we have, and, as always, enjoy!</p>
     </div>
     <h2 id="joke"></h2>
